Updated manifest file

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Alfred",
-  "name": "Alfred Fianyo | Software Engineer - Portfolio",
+  "short_name": "ClickUp App",
+  "name": "React ClickUp Application for Tech Startup",
   "icons": [
     {
       "src": "favicon.ico",
